--- a/src/Footer.css
+++ b/src/Footer.css
@@ -5,8 +5,11 @@
     margin-top: 60px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     width: 100%;
+    max-width: 100vw;
     position: relative;
     z-index: 10;
+    box-sizing: border-box;
+    overflow-x: hidden;
 }
 
 .footer-content {
