--- a/src/App.css
+++ b/src/App.css
@@ -21,8 +21,9 @@ html, body, #root{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     align-items: center;
     position: relative;
-    z-index: 1;
+    z-index: 2;
     overflow-x: hidden;
+    background-color: white;
 }
 p{
     color: #2b2a2a;
@@ -181,6 +182,9 @@ button{
     box-shadow: 0 1px 4px rgba(0, 0, 0, 0.08);
     transition: all 0.3s ease;
     border-radius: 4px;
+    background-color: white;
+    position: relative;
+    z-index: 2;
 }
 
 .cursos li:hover{
