--- a/src/DetalleCurso.css
+++ b/src/DetalleCurso.css
@@ -5,6 +5,9 @@
     align-items: center;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
     border-radius: 4px;
+    background-color: white;
+    position: relative;
+    z-index: 2;
 }
 
 .detalle img{
@@ -44,6 +47,8 @@
     background-color: #f9f9f9;
     border-radius: 8px;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+    position: relative;
+    z-index: 2;
 }
 
 .btn-whatsapp{
