--- a/src/Informacion.css
+++ b/src/Informacion.css
@@ -1,6 +1,7 @@
 .informacion-container {
     padding: 80px 10%;
-    margin-left: 120px;
+    margin-left: auto;
+    margin-right: auto;
     max-width: 1200px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     position: relative;
